# bug-localizer

./: .gitignore  .gitmodules  .ocamlformat  Makefile  README.md  build.sh
.github/workflows/: check.yml
script/: check-format
src/: bugDesc.ml  cmdline.ml  coverage.ml  dune  frontend.ml  instrument.ml  localizer.ml  logging.ml  main.ml  scenario.ml  utils.ml  visualizer.ml
test/simple1/: Makefile  bug_desc.json  compile.sh  test.sh
test/simple1/src/: bug.c
unival-docker/: Dockerfile
unival-docker/src/: ProcessDataProfile.java  RFC.R  StructuredDataCollector.java
