(executable
 (name main)
 (link_flags -ccopt -static)
 (modules
  main
  cmdline
  frontend
  logging
  localizer
  coverage
  bugDesc
  scenario
  instrument
  utils)
 (libraries str cil cil.all-features xmlm unix yojson))

(executable
 (name visualizer)
 (link_flags -ccopt -static)
 (modules visualizer)
 (libraries ocamlgraph))
